# pi0_wrt

./: APconfig.service  APconfig.sh  README.md  install.sh  install_APcfg.sh  install_disp.sh  net_info.service  pi0_wrt.service  startups.sh  wrt_info.service
i2c_1in3_oled/: CMakeLists.txt  Makefile  Makefile.bak  luma-sh1106.py  main  wget-log  wget-log.1  wget-log.2  wget-log.3  wget-log.4  wget-log.5  wget-log.6  wrt_info
i2c_1in3_oled/drv/: KEY_APP.c  dev_hardware_SPI.c  dev_hardware_i2c.c  sysfs_gpio.c
i2c_1in3_oled/include/: OLED_GUI.h  glob.h  gpio_listener.h  keys.h  network.h  screen_disp.h  types.h
i2c_1in3_oled/lib/Config/: DEV_Config.c
i2c_1in3_oled/lib/OLED/: OLED_Driver.c  OLED_GUI.c
i2c_1in3_oled/src/: gpios.c  keys.c  main.c  network.c  screen_disp.c
showip/: Makefile  showip
showip/examples/: EPD_2in13_V4_showip.c  EPD_2in13_V4_test.c  EPD_Test.h  main.c
showip/lib/e-Paper/: EPD.h  EPD_2in13_V4.h  EPD_4in26.c  EPD_5in79.c
spi_2in13_epd/: CMakeLists.txt  Makefile.old  make_install.sh  wrt_info
spi_2in13_epd/lib/Config/: dev_hardware_SPI.c
spi_2in13_epd/lib/e-Paper/: EPD.c  EPD.h  EPD_2in13_V4.c  EPD_2in7_V2.c
spi_2in13_epd/src/: EPD_Test.h  main.c  utils.c
wrt_info/: .gitignore  Makefile  showip  wrt_info
wrt_info/lib/e-Paper/: EPD_13in3k.c  EPD_2in13_V4.h
wrt_info/src/: showip.c  utils.c  utils.h
